src/scss/header.scss
.header {
  padding-left: 16px;
  padding-right: 16px;
}

.logo {
  border-radius: 8px;
}

.nav {
  display: flex;
  justify-content: space-between;

  padding: 8px 16px;
  background-color: #db4200;
  border-radius: 12px;
  min-width: 288px;
  margin: 0 auto;
}

.nav-wrapper {
  display: flex;
}

.nav-list {
  display: none;
}

.nav-list-item {
  font-family: Cherry Bomb;
  font-weight: 400;
  @include font(20, 24);
  color: $_accent_color;
}

.button-burger-menu {
  width: 40px;
  height: 40px;

  border: none;
  background: transparent;
  display: block;
  padding: 0;
}

.modal {
  position: fixed;
  top: 0;
  right: -100%;
  width: 100%;
  height: 100%;
  background-color: $_main_bg_color;
  transition: right 0.5s ease;

  padding: 60px 16px;
}

.hidden {
  display: none;
}

.show {
  display: block;
  right: 0;
}

.close-button {
  width: 40px;
  height: 40px;
  background-color: transparent;
  border: none;

  padding: 0;
  margin-bottom: 28px;
}

.close-button-wrapper {
  display: flex;
  justify-content: end;

  padding-right: 12px;
}

.modal-list {
  font-family: Cherry Bomb;
  font-size: 20px;
  font-weight: 400;
  line-height: 20px;
  color: $_accent_color;

  text-shadow: 2px 2px 0px #db4200, -2px 2px 0px #db4200, 2px -2px 0px #db4200,
    -2px -2px 0px #db4200;

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}

@include media(desktop) {
  .button-burger-menu {
    display: none;
  }

  .nav-list {
    display: flex;
    align-items: center;
    gap: 60px;
    margin-left: 58px;
  }

  .logo {
    width: 64px;
    height: 64px;

    border-radius: 12px;
  }

  .nav {
    padding: 10px 75px;
    // padding-top: 10px;
    // padding-bottom: 10px;

    width: 1056px;
  }
}

